# clothesline

./: .gitignore  CLAUDE.md  README.md
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: ci.yml  deploy.yml
aspire/Clothesline.AppHost/: apphost.cs  apphost.run.json
business/: 01-problem-statement.md  02-target-customer.md  03-market-research.md  04-competitive-analysis.md  05-competitive-edge-features.md  06-product-feature-roadmap.md  07-prd-phase1-mvp.md  08-prd-phase2-ai.md  09-prd-phase3-shop-reliability.md  README.md
business/deep-research/: 01-problem-statement-and-persona.md  02-market-research-tam-sam-som.md  03-competitive-landscape.md  README.md
ops/: DEPLOY.md  GITHUB-ACTIONS-SETUP.md
ops/identity-proxy/: Caddyfile  Dockerfile
ops/zitadel/: Dockerfile  bootstrap.Dockerfile  bootstrap_oidc_app.py  init-steps.yaml
specs/01-mvp/: implementation-plan.md  laundry-prototype.html  m0-m1-post-implementation-report.md  technical-implementation-spec.md
specs/01-mvp/fixes/: 2026-07-05-codespaces-oidc-signin.md  2026-07-10-codespaces-sync-error.md  2026-07-17-zitadel-admin-console.md
specs/01.05-mvp-camera/: camera-prototype.html  implementation-plan.md  technical-implementation-spec.md
specs/02-ai/: technical-implementation-spec.md
specs/02-ai/PoC/: README.md  app.js  index.html
src/backend/: .dockerignore  pyproject.toml
src/backend/clothesline_api/: Dockerfile  pyproject.toml
src/backend/clothesline_api/clothesline_api/: config.py  config_router.py  main.py
src/backend/clothesline_api/clothesline_api/auth/: dependencies.py  jwks.py  router.py  userinfo.py
src/backend/clothesline_api/clothesline_api/common/: deps.py
src/backend/clothesline_api/clothesline_api/domain/: common.py  load_item_categories.py  load_items.py  loads.py  photo_links.py  photos.py  users.py
src/backend/clothesline_api/clothesline_api/media/: blob.py  router.py
src/backend/clothesline_api/clothesline_api/sync/: pull.py  push.py  registry.py  router.py  schemas.py
src/backend/clothesline_db/: alembic.ini  pyproject.toml
src/backend/clothesline_db/clothesline_db/: session.py  url.py
src/backend/clothesline_db/clothesline_db/migrations/: env.py
src/backend/clothesline_db/clothesline_db/migrations/versions/: fc448738cc28_initial_schema.py
src/backend/clothesline_db/clothesline_db/models/: __init__.py  base.py  enums.py  load.py  load_item.py  load_item_category.py  photo.py  photo_link.py  user.py
src/backend/clothesline_tests/: pyproject.toml
src/backend/clothesline_tests/clothesline_tests/: conftest.py  test_auth_jwks.py  test_auth_me.py  test_auth_user_upsert.py  test_config_endpoint.py  test_db_roundtrip.py  test_db_url_ssl.py  test_media_endpoints.py  test_schema_constraints.py  test_sync_datetime_wire_format.py  test_sync_invariants.py  test_sync_ownership_scoping.py  test_sync_pull_ordering.py  test_sync_push_assumed_master.py  test_sync_push_conflict.py  test_sync_push_idempotency.py  test_sync_push_server_authored_owner.py  test_sync_requires_auth.py  test_sync_tombstones.py
src/frontend/clothesline-e2e/: README.md  package-lock.json  package.json  playwright.config.ts
src/frontend/clothesline-e2e/tests/: camera.spec.ts  counter-flow.spec.ts  itemize-speed.spec.ts  offline.spec.ts  photos.spec.ts  responsive.spec.ts
src/frontend/clothesline-e2e/tests/helpers/: auth.ts  load.ts
src/frontend/clothesline-web/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
src/frontend/clothesline-web/src/: App.tsx  HealthStatus.test.tsx  HealthStatus.tsx  index.css  main.tsx  placeholder.test.ts  runtimeConfig.ts  theme.css
src/frontend/clothesline-web/src/auth/: AuthProvider.tsx  Callback.tsx  SignIn.test.tsx  SignIn.tsx  SignOutButton.tsx  oidcConfig.ts  useAuthToken.ts  useCurrentUser.ts
src/frontend/clothesline-web/src/components/: AccountMenu.tsx  AppBar.tsx  ConfirmModal.tsx  Icon.tsx  InstallPrompt.tsx  Skeleton.tsx  StatusPill.tsx  Stepper.tsx  Toast.tsx  loadStatus.ts
src/frontend/clothesline-web/src/db/: DbProvider.tsx  index.ts  pullPushHandlers.test.ts  pullPushHandlers.ts  replication.ts
src/frontend/clothesline-web/src/db/schemas/: loadItemCategories.schema.ts  loadItems.schema.ts  loads.schema.ts  photoLinks.schema.ts  photos.schema.ts
src/frontend/clothesline-web/src/domain/: categories.test.ts  categories.ts  categoryTemplate.ts  counter.test.ts  counter.ts  loads.test.ts  loads.ts  photos.test.ts  photos.ts  receive.test.ts  receive.ts  reconcile.test.ts  reconcile.ts  shared.ts  testDb.ts
src/frontend/clothesline-web/src/photos/: CameraSheet.test.tsx  CameraSheet.tsx  PhotoTile.tsx  byteStore.ts  capture.ts  compress.test.ts  compress.ts  guards.test.ts  guards.ts  mediaApi.ts  uploadQueue.test.ts  uploadQueue.ts  useCamera.test.ts  useCamera.ts  usePhotoBytes.ts
src/frontend/clothesline-web/src/routes/: Closed.tsx  Draft.test.tsx  Draft.tsx  Gallery.tsx  Home.test.tsx  Home.tsx  LoadDetail.tsx  Receive.tsx  Sent.tsx
src/frontend/clothesline-web/src/sync/: SyncProvider.test.tsx  SyncProvider.tsx  SyncStatusBadge.tsx  SyncStatusIndicator.tsx  useOnline.ts  useSyncStatus.ts
