[project]
name = "clothesline-backend-workspace"
version = "0.0.0"
requires-python = ">=3.12"
# The root project depends on every workspace member so a bare `uv sync`
# run from this directory (as Aspire's AddUvicornApp installer does) installs
# everything into the one shared .venv here — not just this trivial root
# project's own (otherwise empty) dependency list.
dependencies = ["clothesline-db", "clothesline-api", "clothesline-tests"]

[tool.uv.sources]
clothesline-db = { workspace = true }
clothesline-api = { workspace = true }
clothesline-tests = { workspace = true }

[tool.uv.workspace]
members = ["clothesline_db", "clothesline_api", "clothesline_tests"]

[dependency-groups]
dev = [
  "ruff>=0.8",
  "mypy>=1.13",
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"clothesline_db/clothesline_db/migrations/versions/*" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = "clothesline_db.migrations.versions.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "testcontainers.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Async tests share a session-scoped event loop so the session-scoped
# `migrated_engine` fixture's connection pool isn't torn across event loops.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
