[project]
name = "clothesline-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "gunicorn>=23.0",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.30",
  "pydantic-settings>=2.6",
  "pyjwt[crypto]>=2.9",
  "clothesline-db",
  "httpx>=0.28.1",
  "azure-storage-blob>=12.24",
  "azure-identity>=1.19",
]

[tool.uv.sources]
clothesline-db = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["clothesline_api"]
