[project]
name = "clothesline-tests"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "clothesline-db",
  "clothesline-api",
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",
]

[tool.uv.sources]
clothesline-db = { workspace = true }
clothesline-api = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["clothesline_tests"]

[tool.pytest.ini_options]
testpaths = ["clothesline_tests"]
